<resources>
    <string name="title_activity_main">Fitness Buddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fitness Buddy</string>
    <string name="nav_header_subtitle">https://github.com/kekesuke/Applied-Project-And-Minor-Dissertation</string>
    <string name="nav_header_desc">Work hard</string>
    <string name="action_settings">Settings</string>
    <!--    Fragment names-->
    <string name="menu_register">Register</string>
    <string name="menu_login">Login</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_diet">Diet (Daily Food Groups)</string>
    <string name="menu_diary">BMI Calculator</string>
    <string name="menu_steps">Steps tracker</string>
    <string name="menu_userProfile">User Profile</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_contactList">Contact List</string>

    <string name="app_name">Current Place Details</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="reset_map">Reset</string>
    <string name="clear_map">Clear</string>
    <string name="flat">Flat</string>
    <string name="rotation">Rotation:</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="weight">Weight(kg)</string>
    <string name="height">Height(cm)</string>
    <string name="calculate">Calculate Your BMI</string>
    <string name="userBMI">Your BMI is</string>
    <string name="reCalculate">Recalculate your BMI</string>

    <!--    spinner-->
    <string name="selected_item">Selected item:</string>
    <string name="foodType">Daily Food Groups</string>
    <string name="foodTree">list</string>
    <!--    select input for diet-->
    <string name="selected_food">Selected Food:</string>
    <string name="selected_food_edit">:</string>
    <string name="selected_food_tally">Selected Food tally:</string>
    <string name="calories">Calories:</string>
    <string name="protein">Protein:</string>
    <string name="carbs">Carbs:</string>
    <string name="fat">Fat</string>
    <string name="userInput">Input grams</string>

</resources>