<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_register" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />
<!--        <item-->
<!--            android:id="@+id/login_logout_button"-->
<!--            android:icon="@drawable/ic_logout"-->
<!--            android:title="@string/logout" />-->
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_calories"
            android:icon="@drawable/ic_run"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_diet"
            android:icon="@drawable/ic_food"
            android:title="@string/menu_diet" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_diary"
            android:title="@string/menu_diary" />
        <item
            android:id="@+id/nav_userProfile"
            android:icon="@drawable/ic_user_profile"
            android:title="@string/menu_userProfile" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_contactList"
            android:icon="@drawable/ic_contact_list"
            android:title="@string/menu_contactList" />

    </group>


</menu>
