<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.applied_project_and_minor_dissertation.android.ui.home.HomeFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.applied_project_and_minor_dissertation.android.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.applied_project_and_minor_dissertation.android.ui.maps.MapFragment"
        android:label="@string/menu_maps"
        tools:layout="@layout/activity_maps" />

    <fragment
        android:id="@+id/nav_calories"
        android:name="com.example.applied_project_and_minor_dissertation.android.ui.stepCounter.StepsFragment"
        android:label="@string/menu_steps"
        tools:layout="@layout/activity_calories" />

    <fragment
        android:id="@+id/nav_diet"
        android:name="com.example.applied_project_and_minor_dissertation.android.ui.diet.DietFragment"
        android:label="@string/menu_diet"
        tools:layout="@layout/activity_diet" />

    <fragment
        android:id="@+id/nav_diary"
        android:name="com.example.applied_project_and_minor_dissertation.android.ui.diary.DiaryFragment"
        android:label="@string/menu_diary"
        tools:layout="@layout/activity_diary" />

    <fragment
        android:id="@+id/nav_userProfile"
        android:name="com.example.applied_project_and_minor_dissertation.android.ui.userProfile.UserProfileFragment"
        android:label="@string/menu_userProfile"
        tools:layout="@layout/activity_diary" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.applied_project_and_minor_dissertation.android.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/activity_chat" />

    <fragment
        android:id="@+id/nav_contactsList"
        android:name="com.example.applied_project_and_minor_dissertation.android.ui.contactList.ContactListFragment"
        android:label="@string/menu_contactList"
        tools:layout="@layout/activity_contacts_list" />
</navigation>