<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stepCounter.CaloriesFragment">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/drag_melbourne" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flat"
            android:textSize="14sp"
            android:onClick="onToggleFlat" />

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotation" />

        <SeekBar
            android:id="@+id/rotationSeekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="onClearMap"
                    android:text="@string/clear_map" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="onResetMap"
                    android:text="@string/reset_map" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/custom_info_window_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/default_info_window"
                    android:checked="true"
                    android:text="@string/default_info_window"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>

                <RadioButton
                    android:id="@+id/custom_info_contents"
                    android:text="@string/custom_info_contents"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>

                <RadioButton
                    android:id="@+id/custom_info_window"
                    android:text="@string/custom_info_window"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </RadioGroup>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>